check correttezz arisposte

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000 " />
     <meta
       name="description"
-      content="TOD'S NPS"
+      content="Lotta in Rosa"
     />
     <link  rel="apple-touch-icon" href="https://www.tods.com/static/assets/images/favicon/favicon-32x32.png" />
     <!--
