--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://www.tods.com/static/assets/images/favicon/favicon-32x32.png" />
+    <link rel="icon" href="fiocco.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000 " />
     <meta
       name="description"
       content="Lotta in Rosa"
     />
-    <link  rel="apple-touch-icon" href="https://www.tods.com/static/assets/images/favicon/favicon-32x32.png" />
+    <link  rel="apple-touch-icon" href="fiocco.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,9 +23,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>TOD'S NPS</title>
+    <title>Lotta in Rosa</title>
   </head>
-  <body>
+  <body >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
